--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.interview">
 
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -13,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.android.interview.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_base"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,17 +21,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.android.interview.SignInActivity" />
+        <activity android:name=".SignInActivity" />
 
         <service
-            android:name="com.android.interview.services.MyFirebaseMessagingService"
+            android:name=".services.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <service
-            android:name="com.android.interview.services.MyFirebaseInstanceIdService"
+            android:name=".services.MyFirebaseInstanceIdService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
@@ -40,9 +39,10 @@
         </service>
 
         <activity
-            android:name="com.android.interview.AddQuestionActivity"
-            android:theme="@style/AppTheme"
-            android:parentActivityName="com.android.interview.MainActivity"></activity>
+            android:name=".AddQuestionActivity"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".EditQuestionActivity"></activity>
     </application>
 
 </manifest>
