--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.interview">
 
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -24,8 +23,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_base" />
-        <activity
-            android:name=".SignInActivity" />
+        <activity android:name=".SignInActivity" />
 
         <service
             android:name=".services.MyFirebaseMessagingService"
@@ -45,10 +43,10 @@
         <activity
             android:name=".AddQuestionActivity"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".EditQuestionActivity"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".BaseActivity"></activity>
     </application>
 
 </manifest>
