--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity
             android:name=".EditQuestionActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".BaseActivity" />
+        <activity android:name=".navigationdrawer.AboutActivity"></activity>
     </application>
 
 </manifest>
